syntax = "proto3";

package proto_graph;

message Edge {
    uint32 from = 1;
    uint32 to = 2;
    double weight = 3;
}

message Graph {
    repeated Edge edges = 1;
	uint32 vertex_count = 2;
}

message RouteInternalData {
    double weight = 1;
    oneof optional_prev_edge {
        uint32 prev_edge = 2;
    }
}

message OptionalRouteInternalData {
    oneof optional_route_internal_data {
        RouteInternalData route_internal_data = 1;
    }
}

message RoutesInternalData {
    repeated OptionalRouteInternalData routes_internal_data = 1;
}

message Router {
    repeated RoutesInternalData routes_internal_data = 1;
}